# Caster_Service

./: .gitignore  .gitmodules  CMakeLists.txt
.cmake/: Auth_Verify.yml.in  Caster_Core.yml.in  Info_Upload.yml.in  Service_Setting.yml.in  redis_inux.conf.in  redis_windows.conf.in
.github/workflows/: aarch64.yml  build.yml  cmake-multi-platform.yml  cmake-windows-platform.yml  docker-linux-platform.yml
app/: CMakeLists.txt
app/extra/heart_beat/: heart_beat.cpp  heart_beat.h
app/extra/info_upload/: info_upload.cpp  info_upload.h
app/extra/license_check/: license_check.cpp  license_check.h  register.cpp
app/include/: ntrip_caster.h
app/include/Carrier/: client_grid.h  client_ntrip.h  client_virtual.h  server_grid.h  server_ntrip.h
app/include/Connector/: ntrip_compat_listener.h  ntrip_relay_connector.h
app/include/Extra/: license_check.h
app/src/: main.cpp  ntrip_caster.cpp  reg_check.cpp
app/src/Carrier/: client_grid.cpp  client_ntrip.cpp  client_virtual.cpp  server_grid.cpp  server_ntrip.cpp  source_ntrip.cpp
app/src/Connector/: ntrip_compat_listener.cpp  ntrip_relay_connector.cpp
app/src/DB/: relay_account_tb.cpp
app/src/Extra/: license_check.cpp  register.cpp  register.h
ci/: build.sh  build_in_linux.sh  build_in_windows.ps1
ci/docker/: dockerfile.debian  dockerfile.rhel
dev/: CMakeLists.txt
dev/ntrip_client_sim/: CMakeLists.txt
dev/ntrip_server_sim/: CMakeLists.txt
dev/strsvr_mult/: CMakeLists.txt  install_strsvr.sh  main.cpp  tasklist.txt  uninstall_strsvr.sh
doc/: caster_core.json  ntrip_reply.txt
env/docker/: docker-compose.yml  use-docker-compose.txt
env/script/: auto_install_online.sh
env/script/linux/: start_service.sh
env/script/linux/supervisor/: install_caster_service.sh  install_supervisor_item.sh  uninstall_redis-service.sh  uninstall_supervior_item.sh
env/script/linux/systemd/: caster_service.service  install_caster_service.sh
env/script/windows/: start_service.bat
env/script/windows/nssm/: nssm.bat
env/scripts/supervisor/: install_caster_service.sh  install_redis_service.sh  install_service.sh  uninstall_caster_service.sh  uninstall_redis_service.sh  uninstall_service.sh
env/scripts/systemd/: install_caster_service.sh  install_redis_service.sh  uninstall_caster_service.sh  uninstall_redis_service.sh
lib/: CMakeLists.txt
lib/auth_verify/: CMakeLists.txt
lib/caster_core/: CMakeLists.txt
lib/caster_core/include/: Caster_Core.h
lib/caster_core/src/: Caster_Core.cpp  caster_internal.cpp  caster_internal.h
lib/nav_tool/: CMakeLists.txt
lib/nav_tool/src/: deviceID.cpp
rely/: CMakeLists.txt
